# checkpoint

./: .gitignore  README.md  checkpoint.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/checkpoint/: __main__.py  about.py  app.py  categories.py  clip_explorer.py  config.py  main_window.py  obs_client.py  popup.py  resolve_export.py  resources.py  storage.py
tests/: conftest.py  test_about.py  test_app.py  test_clip_explorer.py  test_main_window.py  test_obs_client.py  test_popup.py  test_resolve_export.py  test_resources.py  test_scaffold.py  test_storage.py
