[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "obsws-python",
    "pystray",
    "Pillow",
    "python-vlc",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "checkpoint.__version__"}
